--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,7 +18,133 @@
         <!-- section__home-hero -->
         <section class="section section__home-hero">
             <div class="container">
-                
+                <div class="section-body overflow-hidden rounded-3 bg-light">
+                    <div class="hero-grid">
+                        <div></div>
+                        <div class="card card-hero-info">
+                            <div class="card-body">
+                                <h1 class="hero-title">Digital-продукты для бизнеса: эффективная стратегия под отрасль</h1>
+                                <div class="d-flex gap-2">
+                                    <span>
+                                        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
+                                            <circle cx="18" cy="2" r="2" fill="#F74251"/>
+                                            <circle cx="18" cy="10" r="2" fill="#F74251"/>
+                                            <circle cx="18" cy="18" r="2" fill="#F74251"/>
+                                            <circle cx="26" cy="18" r="2" fill="#F74251"/>
+                                            <circle cx="10" cy="18" r="2" fill="#F74251"/>
+                                            <circle cx="2" cy="18" r="2" fill="#F74251"/>
+                                            <circle cx="12" cy="12" r="2" fill="#F74251"/>
+                                            <circle cx="12" cy="23" r="2" fill="#F74251"/>
+                                            <circle cx="7" cy="29" r="2" fill="#F74251"/>
+                                            <circle cx="7" cy="7" r="2" fill="#F74251"/>
+                                            <circle cx="24" cy="12" r="2" fill="#F74251"/>
+                                            <circle cx="24" cy="24" r="2" fill="#F74251"/>
+                                            <circle cx="30" cy="29" r="2" fill="#F74251"/>
+                                            <circle cx="30" cy="8" r="2" fill="#F74251"/>
+                                            <circle cx="34" cy="18" r="2" fill="#F74251"/>
+                                            <circle cx="18" cy="26" r="2" fill="#F74251"/>
+                                            <circle cx="18" cy="34" r="2" fill="#F74251"/>
+                                        </svg>
+                                    </span>
+                                    <div class="hero-subtitle">От шаблона до сложных экосистем. Быстрый старт за 14 дней с возможностью масштабирования</div>
+                                </div>
+                            </div>
+                            <div class="card-btn-wrapper">
+                                <a href="#" class="btn btn-primary btn-l w-100">Обсудить проект</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- section__partners-slider -->
+        <section class="section section__partners-slider">
+            <div class="bg-light">
+                <div class="swiper swiperPartners">
+                    <div class="swiper-wrapper">
+                        <div class="swiper-slide">
+                            <div class="swiper-img">
+                                <img 
+                                class="img-fluid"
+                                src="img/home/partner-logo-01.svg" 
+                                alt="ЗИД">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-img">
+                                <img 
+                                class="img-fluid"
+                                src="img/home/partner-logo-02.svg" 
+                                alt="ЗИД">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-img">
+                                <img 
+                                class="img-fluid"
+                                src="img/home/partner-logo-03.svg" 
+                                alt="ЗИД">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-img">
+                                <img 
+                                class="img-fluid"
+                                src="img/home/partner-logo-04.svg" 
+                                alt="ЗИД">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-img">
+                                <img 
+                                class="img-fluid"
+                                src="img/home/partner-logo-05.svg" 
+                                alt="ЗИД">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-img">
+                                <img 
+                                class="img-fluid"
+                                src="img/home/partner-logo-01.svg" 
+                                alt="ЗИД">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-img">
+                                <img 
+                                class="img-fluid"
+                                src="img/home/partner-logo-02.svg" 
+                                alt="ЗИД">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-img">
+                                <img 
+                                class="img-fluid"
+                                src="img/home/partner-logo-03.svg" 
+                                alt="ЗИД">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-img">
+                                <img 
+                                class="img-fluid"
+                                src="img/home/partner-logo-04.svg" 
+                                alt="ЗИД">
+                            </div>
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="swiper-img">
+                                <img 
+                                class="img-fluid"
+                                src="img/home/partner-logo-05.svg" 
+                                alt="ЗИД">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
 
