--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,8 +18,8 @@
         <!-- section__home-hero -->
         <section class="section section__home-hero">
             <div class="container">
-                <div class="section-body overflow-hidden rounded-3 bg-light">
-                    <div class="hero-grid">
+                <div class="rounded-3 p-40" style="min-height: 720px;">
+                    <!-- <div class="hero-grid">
                         <div></div>
                         <div class="card card-hero-info">
                             <div class="card-body">
@@ -53,14 +53,14 @@
                                 <a href="#" class="btn btn-primary btn-l w-100">Обсудить проект</a>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
 
         <!-- section__partners-slider -->
         <section class="section section__partners-slider">
-            <div class="bg-light">
+            <div class="bg-white">
                 <div class="swiper swiperPartners">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
