--- a/src/html/index.html
+++ b/src/html/index.html
@@ -17,43 +17,61 @@
 
         <!-- section__home-hero -->
         <section class="section section__home-hero">
-            <div class="container">
-                <div class="rounded-3 p-40" style="min-height: 720px;">
-                    <!-- <div class="hero-grid">
-                        <div></div>
-                        <div class="card card-hero-info">
-                            <div class="card-body">
-                                <h1 class="hero-title">Digital-продукты для бизнеса: эффективная стратегия под отрасль</h1>
-                                <div class="d-flex gap-2">
-                                    <span>
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
-                                            <circle cx="18" cy="2" r="2" fill="#F74251"/>
-                                            <circle cx="18" cy="10" r="2" fill="#F74251"/>
-                                            <circle cx="18" cy="18" r="2" fill="#F74251"/>
-                                            <circle cx="26" cy="18" r="2" fill="#F74251"/>
-                                            <circle cx="10" cy="18" r="2" fill="#F74251"/>
-                                            <circle cx="2" cy="18" r="2" fill="#F74251"/>
-                                            <circle cx="12" cy="12" r="2" fill="#F74251"/>
-                                            <circle cx="12" cy="23" r="2" fill="#F74251"/>
-                                            <circle cx="7" cy="29" r="2" fill="#F74251"/>
-                                            <circle cx="7" cy="7" r="2" fill="#F74251"/>
-                                            <circle cx="24" cy="12" r="2" fill="#F74251"/>
-                                            <circle cx="24" cy="24" r="2" fill="#F74251"/>
-                                            <circle cx="30" cy="29" r="2" fill="#F74251"/>
-                                            <circle cx="30" cy="8" r="2" fill="#F74251"/>
-                                            <circle cx="34" cy="18" r="2" fill="#F74251"/>
-                                            <circle cx="18" cy="26" r="2" fill="#F74251"/>
-                                            <circle cx="18" cy="34" r="2" fill="#F74251"/>
-                                        </svg>
-                                    </span>
-                                    <div class="hero-subtitle">От шаблона до сложных экосистем. Быстрый старт за 14 дней с возможностью масштабирования</div>
-                                </div>
+            <div class="container-fluid">
+                <div class="hero-grid" style="min-height: 720px;">
+                    <!-- hero-video -->
+                    <div class="hero-video">
+                        <img class="img-fluid w-100" src="img/home/hero-video-cover.png">
+                    </div>
+                    <!-- hero-card -->
+                    <div class="card card-hero-info">
+                        <div class="card-body">
+                            <h1 class="hero-title">Digital-продукты для бизнеса: эффективная стратегия под отрасль</h1>
+                            <div class="d-flex gap-2">
+                                <span class="me-1">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
+                                        <circle cx="18" cy="2" r="2" fill="#F74251"/>
+                                        <circle cx="18" cy="10" r="2" fill="#F74251"/>
+                                        <circle cx="18" cy="18" r="2" fill="#F74251"/>
+                                        <circle cx="26" cy="18" r="2" fill="#F74251"/>
+                                        <circle cx="10" cy="18" r="2" fill="#F74251"/>
+                                        <circle cx="2" cy="18" r="2" fill="#F74251"/>
+                                        <circle cx="12" cy="12" r="2" fill="#F74251"/>
+                                        <circle cx="12" cy="23" r="2" fill="#F74251"/>
+                                        <circle cx="7" cy="29" r="2" fill="#F74251"/>
+                                        <circle cx="7" cy="7" r="2" fill="#F74251"/>
+                                        <circle cx="24" cy="12" r="2" fill="#F74251"/>
+                                        <circle cx="24" cy="24" r="2" fill="#F74251"/>
+                                        <circle cx="30" cy="29" r="2" fill="#F74251"/>
+                                        <circle cx="30" cy="8" r="2" fill="#F74251"/>
+                                        <circle cx="34" cy="18" r="2" fill="#F74251"/>
+                                        <circle cx="18" cy="26" r="2" fill="#F74251"/>
+                                        <circle cx="18" cy="34" r="2" fill="#F74251"/>
+                                    </svg>
+                                </span>
+                                <div class="hero-subtitle h5 fw-light opacity-60 mb-0">От шаблона до сложных экосистем.<br> Быстрый старт за 14 дней с возможностью масштабирования</div>
                             </div>
                             <div class="card-btn-wrapper">
                                 <a href="#" class="btn btn-primary btn-l w-100">Обсудить проект</a>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
+                    <!-- hero-slider -->
+                    <div class="hero-glass-cards">
+                        <div class="card card-glass">
+                            <div class="card-body">
+                                <!-- img -->
+                                <div class="me-lg-2">
+                                    <img class="img-fluid" src="img/home/card-glass-01.svg">
+                                </div>
+                                <!-- text -->
+                                <div>
+                                    <div class="h4 fw-medium text-white mb-1 ">Гибкость под бизнес</div>
+                                    <div class="fs-16 fw-light text-white opacity-60">Разрабатываем от Tilda до Bitrix и кастомных решений</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
